src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/C4A15.cd
package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram C4A15 {
  class T1;
  class T2;
  class C {
    String a;
    String b;
    int b2;
    T1 c;
    T2 c2;
  }
}
