src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/CD4AC0006.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram CD4AC0006 {
  enum E {
    a, b, a, c;
  }
}